# mspr_bloc_2_front

./: Cargo.toml  index.html  styles.css
.github/worflows/: release.yml
.github/workflows/: gh-pages-deploy.yml  release.yml  rust.yml
src/: lib.rs  main.rs  service.rs
src/components/: app.rs  auth.rs  login.rs  mod.rs  register.rs
