[package]
name = "mspr_bloc2_front"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio"] }
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
